# project10

./: .gitignore  docker-compose.yml  library_fixture.json  main.py  pyproject.toml  requirements.txt
config/: settings.py
users/: forms.py  urls.py  views.py
users/management/commands/: createadmin.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  register.html
