[tool.poetry]
name = "pythonproject10"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^6.0"
psycopg2-binary = "^2.9.11"
python-dotenv = "^1.2.1"
ipython = "^9.8.0"
gunicorn = "^25.1.0"
django-redis = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
